@@ -29,7 +29,7 @@ import javax.validation.Valid;
 
 
 @io.swagger.annotations.Api(description = "the mc API")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2024-07-06T13:12:01.967999178Z[Etc/UTC]", comments = "Generator version: 7.6.0")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2024-11-03T05:51:11.784317652Z[Etc/UTC]", comments = "Generator version: 7.9.0")
 public class McApi  {
    private final McApiService delegate;
 
@@ -40,7 +40,7 @@ public class McApi  {
          String implClass = servletContext.getInitParameter("McApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (McApiService) Class.forName(implClass).newInstance();
+               delegate = (McApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
